--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "supertest-as-promised": "^4.0.0"
   },
   "dependencies": {
+    "async": "^2.5.0",
     "babel-core": "^6.17.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.9.0",
@@ -54,12 +55,15 @@
     "cors": "^2.7.1",
     "express": "^4.13.4",
     "express-force-ssl": "^0.3.2",
+    "html-pdf": "^2.1.0",
     "jsonwebtoken": "^7.1.9",
     "lodash": "^4.13.1",
     "mongoose": "^4.4.19",
     "mongoose-create-unique": "^0.4.1",
     "mongoose-keywords": "^0.3.1",
     "morgan": "^1.7.0",
+    "nodemailer": "^4.1.2",
+    "nunjucks": "^3.0.1",
     "passport": "^0.3.2",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
