--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-1": "^6.16.0",
     "babel-runtime": "^6.11.6",
-    "bcrypt": "^1.0.2",
+    "bcrypt": "^1.0.3",
+    "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.4.0",
     "body-parser": "^1.15.1",
     "bodymen": "^1.0.1",
@@ -60,8 +61,10 @@
     "lodash": "^4.13.1",
     "mongoose": "^4.4.19",
     "mongoose-create-unique": "^0.4.1",
+    "mongoose-fill": "^1.7.0",
     "mongoose-keywords": "^0.3.1",
     "morgan": "^1.7.0",
+    "node-excel-export": "^1.4.3",
     "nodemailer": "^4.1.2",
     "nunjucks": "^3.0.1",
     "passport": "^0.3.2",
